--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -2,10 +2,44 @@
 
   <header class="page-header">
     <h1>Order #<%= @order.id %></h1>
+    <h3>Thank you for shopping with Us!</h3>
+    <h4>An email has been sent to <%= @order.email %> with the confirmation of your order.</h4>
   </header>
 
   <div class="order-summary jumbotron">
     <h4>Thank you for your order!</h4>
+  </div>
+  <div class="panel panel-default items">
+    <table class="table table-bordered">
+      <thead>
+        <tr>
+          <th colspan="2">Product</th>
+          <th>Unit Price</th>
+          <th>Quantity</th>
+          <th>Price</th>
+        </tr>
+      </thead>
+      <tbody>
+      <% @order.line_items.each do |item| %>
+       <%= render 'line_items', product: item.product, quantity: item.quantity.to_i %>
+  <% end %>
+      </tbody>
+      <tfoot>
+        <tr>
+          <th colspan="4">
+            ORDER TOTAL:
+          </th>
+          <th>
+           <% order_total = 0 %>
+          <% @order.line_items.each do |item| %>
+            <% order_total += item.quantity * item.product.price %>
+          <% end %>
+          <%= humanized_money_with_symbol order_total %>
+            
+          </th>
+        </tr>
+      </tfoot>
+    </table>
   </div>
 
   <%= link_to "Continue Shopping", root_path, class: 'btn btn-lg btn-primary' %>
