--- a/app/views/admin/dashboard/show.html.erb
+++ b/app/views/admin/dashboard/show.html.erb
@@ -1,3 +1,18 @@
+<br>
+<br>
+<br>
 
-<h1>Admin::Dashboard#show</h1>
-<p>Find me in app/views/admin/dashboard/show.html.erb</p>
+<figure class="text-center">
+  <h1>
+<p> Number of Products in the database </p>
+      <%= @productscount %>
+      <br>
+      <a href="http://localhost:3000/admin/products">Admin product list page</a>
+      </h1>
+      
+     
+     <h1> <p> Number of Categories in the database </p>
+      <%= @categoriescount %>
+      <br>
+      <a href="http://localhost:3000/admin/products">Admin product list page</a>
+    </h1>
