--- a/app/views/layouts/_top_nav.html.erb
+++ b/app/views/layouts/_top_nav.html.erb
@@ -44,8 +44,8 @@
         </li> %>
       </ul>
       <ul class="navbar-nav">
-      <li class="nav-item">
-            <li><%= link_to 'About', about_path %></li>
+      <li class="nav-item"><%= link_to 'About', about_path, class: "nav-link"  %></li>
+            
         <li class="nav-item dropdown">
           <a
             class="nav-link dropdown-toggle text-danger"
