--- a/app/views/layouts/_top_nav.html.erb
+++ b/app/views/layouts/_top_nav.html.erb
@@ -44,9 +44,15 @@
         </li> %>
       </ul>
       <ul class="navbar-nav">
-      <li class="nav-item"><%= link_to 'About', about_path, class: "nav-link"  %></li>
+         <% if current_user %>
+          <li class="nav-item"><li class="nav-link"> Signed in as <%= current_user.name %></li></li> <li class="nav-item"> <%= link_to "Logout", '/logout', class: "nav-link" %></li>
+           <% else %>
+          <li class="nav-item"><%= link_to 'Login', '/login', class: "nav-link" %></li>
+          <li class="nav-item"><%= link_to 'Signup', '/signup', class: "nav-link"  %></li>
+           <% end %>
+           <li class="nav-item"><%= link_to 'About', about_path, class: "nav-link"  %></li>
             
-        <li class="nav-item dropdown">
+          <li class="nav-item dropdown">
           <a
             class="nav-link dropdown-toggle text-danger"
             href="#"
